<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProyectoFinal</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="MyApp">My App</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_my_courses">Mis Cursos</string>
    <string name="nombre_curso">Nombre Curso</string>
    <string name="descripcion_curso">Descripción</string>
    <string name="imagen_del_curso">Imagen del Curso</string>

</resources>
