<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="horizontal" >
    
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/imagen_del_curso"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center_vertical" 
        android:layout_weight="1">
		<TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:text="@string/nombre_curso"
	        android:textSize="20sp"
	        android:textStyle="bold"
	        android:id="@+id/nombre_curso" />    
	    <TextView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:text="@string/descripcion_curso"
	        android:textStyle="italic"
	        android:textSize="16sp"
	        android:id="@+id/descripcion_curso" />        
    </LinearLayout>
    
    
    
    
</LinearLayout>
